--- a/server/package.json
+++ b/server/package.json
@@ -8,18 +8,21 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "axios": "^1.11.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.4",
-    "uuid": "^11.1.0"
+    "axios": "1.6.2",
+    "bcryptjs": "2.4.3",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "8.0.3",
+    "multer": "1.4.5-lts.1",
+    "socket.io": "4.7.4",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
