--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,25 @@
     "uuid": "9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "@vercel/node": "^1.16.0"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "vercel": {
+    "version": 2,
+    "builds": [
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "index.js"
+      }
+    ]
   }
 }
