--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,27 @@
     "mongoose": "8.0.3",
     "multer": "1.4.5-lts.1",
     "socket.io": "4.7.4",
-    "uuid": "9.0.1",
-    "@vercel/node": "^1.16.0"
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "vercel": {
+    "version": 2,
+    "builds": [
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "index.js"
+      }
+    ]
   }
 }
