--- a/server/.gitignore
+++ b/server/.gitignore
@@ -3,7 +3,6 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Environment variables
 .env
@@ -24,16 +23,16 @@ pids
 
 # Coverage directory used by tools like istanbul
 coverage/
-*.lcov
 
 # nyc test coverage
 .nyc_output
 
+# Dependency directories
+node_modules/
+jspm_packages/
+
 # Optional npm cache directory
 .npm
-
-# Optional eslint cache
-.eslintcache
 
 # Optional REPL history
 .node_repl_history
@@ -44,35 +43,24 @@ coverage/
 # Yarn Integrity file
 .yarn-integrity
 
-# Upload files (keep the directory structure but ignore uploaded files)
+# dotenv environment variables file
+.env
+
+# Uploaded files (keep directory structure)
 uploads/*
 !uploads/.gitkeep
 
-# Database files
-*.db
-*.sqlite
-*.sqlite3
-
-# Backup files
-*.bak
-*.backup
-
-# IDE
+# IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
-# OS
+# OS generated files
 .DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db
-
-# Temporary files
-*.tmp
-*.temp 
+Thumbs.db 
