--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "echo 'Build completed'",
-    "postinstall": "echo 'Post-install completed'"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "axios": "1.6.2",
