--- a/server/.npmrc
+++ b/server/.npmrc
@@ -1,5 +1,9 @@
-# 设置 npm 配置
-registry=https://registry.npmjs.org/
+# 解决npm退出处理程序错误
 legacy-peer-deps=true
 fund=false
-audit=false 
+audit=false
+loglevel=error
+
+# Render平台优化
+cache=.npm-cache
+prefer-offline=true 
