修复Render部署问题：升级Node.js到20.x，优化构建脚本

--- a/server/.npmrc
+++ b/server/.npmrc
@@ -6,4 +6,13 @@ loglevel=error
 
 # Render平台优化
 cache=.npm-cache
-prefer-offline=true 
+prefer-offline=true
+
+# 网络优化
+registry=https://registry.npmjs.org/
+fetch-retries=3
+fetch-retry-mintimeout=5000
+fetch-retry-maxtimeout=60000
+
+# 性能优化
+maxsockets=50 
