--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: wechat-clone-server
     env: node
     plan: free
-    buildCommand: chmod +x deploy-render.sh && ./deploy-render.sh
+    buildCommand: chmod +x render-build.sh && ./render-build.sh
     startCommand: cd server && npm start
     envVars:
       - key: NODE_ENV
