优化为Render平台部署：简化结构，移除复杂脚本

--- a/render.yaml
+++ b/render.yaml
@@ -3,16 +3,4 @@ services:
     name: wechat-clone-server
     env: node
     plan: free
-    buildCommand: chmod +x render-build.sh && ./render-build.sh
-    startCommand: cd server && npm start
-    envVars:
-      - key: NODE_ENV
-        value: production
-      - key: MONGODB_URI
-        sync: false
-      - key: JWT_SECRET
-        sync: false
-      - key: CLIENT_URL
-        value: https://gpf6666.github.io
-      - key: RENDER
-        value: true 
+    rootDir: server 
