--- a/server/package.json
+++ b/server/package.json
@@ -4,24 +4,18 @@
   "description": "仿微信聊天应用后端服务",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "postinstall": "echo 'Dependencies installed successfully'"
+    "start": "node index.js"
   },
   "dependencies": {
-    "axios": "1.6.2",
-    "bcryptjs": "2.4.3",
+    "express": "4.18.2",
+    "mongoose": "8.0.3",
+    "socket.io": "4.7.4",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
-    "express": "4.18.2",
+    "bcryptjs": "2.4.3",
     "jsonwebtoken": "9.0.2",
-    "mongoose": "8.0.3",
     "multer": "1.4.5-lts.1",
-    "socket.io": "4.7.4",
     "uuid": "9.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": "20.x"
