--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,10 @@
     "bcryptjs": "2.4.3",
     "jsonwebtoken": "9.0.2",
     "multer": "1.4.5-lts.1",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "array-flatten": "3.0.0"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">=18.0.0"
   }
 }
