--- a/server/.npmrc
+++ b/server/.npmrc
@@ -1,12 +1,17 @@
-# 解决Render部署权限问题
-unsafe-perm=true
-
 # 网络优化
 registry=https://registry.npmjs.org/
-fetch-retries=5
-fetch-retry-mintimeout=20000
-fetch-retry-maxtimeout=120000
+fetch-retries=3
+fetch-retry-mintimeout=5000
+fetch-retry-maxtimeout=60000
 
 # 性能优化
 maxsockets=50
-prefer-offline=true 
+prefer-offline=true
+
+# 安全设置
+audit=false
+fund=false
+loglevel=error
+
+# 解决权限问题
+unsafe-perm=true 
